--- a/config.toml
+++ b/config.toml
@@ -1,103 +1,59 @@
 # default config
-baseURL = "https://waldoCorp.com"
+baseURL = "https://test.waldoCorp.com/ben_test/homepage_test"
 languageCode = "en-us"
 title = "waldoCorp"
-theme = "parsa-hugo"
+theme = "hugo-creative-portfolio-theme"
 summaryLength = "10"
 paginate = 6
 
-# output
-[outputs]
-home = ["HTML", "RSS", "JSON"]
-
-# CSS Plugins
-[[params.plugins.css]]
-link = "plugins/bootstrap/bootstrap.min.css"
-[[params.plugins.css]]
-link = "plugins/slick/slick.css"
-[[params.plugins.css]]
-link = "plugins/themify-icons/themify-icons.css"
-
-# JS Plugins
-[[params.plugins.js]]
-link = "plugins/jQuery/jquery.min.js"
-[[params.plugins.js]]
-link = "plugins/bootstrap/bootstrap.min.js"
-[[params.plugins.js]]
-link = "plugins/slick/slick.min.js"
-[[params.plugins.js]]
-link = "plugins/headroom/headroom.js"
-[[params.plugins.js]]
-link = "plugins/instafeed/instafeed.min.js"
-[[params.plugins.js]]
-link = "plugins/masonry/masonry.js"
-[[params.plugins.js]]
-link = "plugins/reading-time/readingTime.min.js"
-[[params.plugins.js]]
-link = "plugins/smooth-scroll/smooth-scroll.js"
-[[params.plugins.js]]
-link = "plugins/search/fuse.min.js"
-[[params.plugins.js]]
-link = "plugins/search/mark.js"
-[[params.plugins.js]]
-link = "plugins/search/search.js"
-
-# navigation
-[[menu.main]]
-name = "About"
-URL = "about"
-weight = 2
 
 #[[menu.main]]
 #name = "Contact"
 #URL = "contact"
 #weight = 3
 
+
 # deult parameter
 [params]
-logo = "images/logo.png"
-home = "Home"
-# theme layout ( two layout is available, "1" and "2" )
-layout = "1"
-# Meta data
-description = "This is meta description"
-# Preloader
-preloader = true
-# search
-search = false
-# about author
-author = "Waldo"
-author_image = "images/banner-img.jpg"
-bio = "We like to make things"
-# Contact info
-#mobile = "+90 000 333 22"
-email = "contact@waldoCorp.com"
-#address = "6 rip carl Avenue CA 90733"
-# Contact Form Action
-# contact_form_action = "#"
-# Google Analitycs
-# copyright
-copyright = "Copyright &copy; 2020 [waldoCorp.com](waldoCorp.com)"
+  style = "pink"
+  logo = "images/logo.png"
+  home = "Home"
 
-# Instagram feed
-#[params.instafeed]
-#enable = true
-#user_id = "4044026246"
-#access_token = "4044026246.1677ed0.8896752506ed4402a0519d23b8f50a17"
+  # Meta data
+  description = "Homepage for waldoCorp"
 
-# social site
-#[[params.social]]
-#icon = "ti-facebook"
-#URL = "#"
+  sidebarAbout = [
+    "Composed of Lief and Ben, waldoCorp is an assembly of projects we have worked on"
+  ]
 
-#[[params.social]]
-#icon = "ti-twitter-alt"
-#URL = "#"
+  copyright = "Copyright &copy; 2020 waldoCorp"
 
-#[[params.social]]
-#icon = "ti-linkedin"
-#URL = "#"
+  email = "contact@waldocorp.com"
 
-[[params.social]]
-icon = "ti-github"
-URL = "https://github.com/williamlief"
+  [[params.navlinks]]
+  name = "Home"
+  url = "portfolio/"
+  home = true
+
+  [[params.navlinks]]
+  name = "About"
+  url = "about/"
+
+  [[params.navlinks]]
+  name = "Contact"
+  url = "mailto:contact@waldocorp.com"
+
+  [params.social]
+
+#  facebook      = "full page or profile url in facebook"
+#  googleplus    = "full profile url in googleplus"
+#  email         = "contact@waldocorp.com"
+#  twitter       = "full profile url in twitter"
+#  linkedin      = "full profile url in linkedin"
+#  stackoverflow = "full profile url in stackoverflow"
+#  instagram     = "full profile url in instagram"
+  github        = "https://github.com/waldoCorp"
+
+# Allow raw html for links?
+[markup]
+  defaultMarkdownHandler = "blackfriday"
